tests/src/frontend/typechecking/invalid/inherit_params_3.sk
base class B{f: Int}
base class D final {f2: Int} extends B
class Foo{f3: Int} extends B, D
